#11/fetch ai drawing (#18)
* add: openAPI v3

* add: install prism

* add: API endpoint for dev

* mock setup ok

* add: vanilla extract recipe

* add: tanstack query install

* add: generate fetch code with orval

* add: tanstack query provider

* fix: openAPI

* create: MVC + service + repository architecture

* fix: delete zoom

* create: show AI drawing

* format: lint

* fix: converter

* add: suppot no image
